--- a/spring-petclinic/src/main/resources/messages/messages.properties
+++ b/spring-petclinic/src/main/resources/messages/messages.properties
@@ -1,5 +1,5 @@
 # modified by Michael Ashby, added welcome page text. 
-welcome=Welcome to Capgemini AWS Cloud demo
+welcome=Welcome to Capgemini AWS Cloud Demo
 required=is required
 notFound=has not been found
 duplicate=is already in use
