--- a/spring-petclinic/src/main/resources/messages/messages.properties
+++ b/spring-petclinic/src/main/resources/messages/messages.properties
@@ -7,7 +7,7 @@ nonNumeric=must be all numeric
 duplicateFormSubmission=Duplicate form submission is not allowed
 typeMismatch.date=invalid date
 typeMismatch.birthDate=invalid date
-tutorialDecription=This is a live Java Spring Framework application running on Amazon Cloud Services with MySQL Database as the backend relational store. Please explore the application, and refer to the following resources to learn how to migrate a Spring Framework application to AWS. While the tutorial below focuses on a popular Spring Framework sample application, <a href="http://petclinic.cloudapp.net">the Java PetClinic</a> , the tutorial will introduce you to the Amazon Cloud Services, MySQL Database, and a variety of other technologies that will be used in many other types of Java applications deployed on AWS Cloud platform.
+tutorialDecription=This is a live Java Spring Framework application running on Amazon Web Services Cloud with MySQL Database as the backend relational store. Please explore the application, and refer to the following resources to learn how to migrate a Spring Framework application to AWS. While the tutorial below focuses on a popular Spring Framework sample application, <a href="http://petclinic.cloudapp.net">the Java PetClinic</a> , the tutorial will introduce you to the Amazon Cloud Services, MySQL Database, and a variety of other technologies that will be used in many other types of Java applications deployed on AWS Cloud platform.
  
 tutorialDecription.link=Step by Step Tutorial for the Migrating the Java PetClinic to AWS.
 documentationDecription.link=Explore the Sample Application Downloadable on github.
